--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev:spotlight": "spotlight-sidecar",
     "dev:next": "next dev",
     "dev": "run-p dev:*",
-    "build": "npm run db:migrate && next build",
+    "build": "next build",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "clean": "rimraf .next .swc out coverage",
@@ -31,11 +31,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@libsql/client": "^0.6.0",
     "@logtail/pino": "^0.4.21",
-    "@sentry/nextjs": "^7.109.0",
     "@spotlightjs/spotlight": "^1.2.16",
     "@t3-oss/env-nextjs": "^0.9.2",
     "checkly": "^4.6.3",
-    "drizzle-orm": "^0.30.7",
     "next": "^14.1.4",
     "next-intl": "^3.11.0",
     "pino": "^8.19.0",
@@ -77,7 +75,6 @@
     "cross-env": "^7.0.3",
     "cssnano": "^6.1.2",
     "dotenv-cli": "^7.4.1",
-    "drizzle-kit": "^0.20.14",
     "encoding": "^0.1.13",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
