fix: implement shadcn to this project

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -96,5 +96,15 @@
         ]
       }
     }
-  ]
+  ],
+
+  "settings": {
+    "tailwindcss": {
+      "callees": ["cn"],
+      "config": "tailwind.config.cjs"
+    },
+    "next": {
+      "rootDir": ["apps/*/"]
+    }
+  }
 }
