--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Remove .lock files
+package-lock.json
+yarn.lock
+
 # dependencies
 /node_modules
 /.pnp
@@ -51,3 +55,4 @@ local
 
 # Sentry Config File
 .sentryclirc
+
